Refactor Service triggering flow (#171)
* Added New Flow Changes to companies

* Modified National Holidays to match the new flow

* Modified Electricity Services to work with the new flow

* Modified Weather to adjust to the new flow

* Modified Companies related hbs

--- a/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/eoy.yml
@@ -61,6 +61,8 @@ formatResult:
   call: http.post
   args:
     url: "[#DMAPPER]/common-services/hbs/calendar/national-holidays/get_national_holiday_eoy"
+    headers:
+      type: json
     body:
       data: ${holidaysEOY}
   result: formattedHolidays
