--- a/DSL/Ruuter.public/GET/calendar/national-holidays/ytd.yml
+++ b/DSL/Ruuter.public/GET/calendar/national-holidays/ytd.yml
@@ -61,6 +61,8 @@ formatResult:
   call: http.post
   args:
     url: "[#DMAPPER]/common-services/hbs/calendar/national-holidays/get_national_holiday_ytd"
+    headers:
+      type: json
     body:
       data: ${holidaysYTD}
   result: formattedHolidays
