--- a/DSL/Ruuter.public/POST/companies/company-beneficial-owners.yml
+++ b/DSL/Ruuter.public/POST/companies/company-beneficial-owners.yml
@@ -8,6 +8,12 @@ declaration:
   namespace: common-services
   allowlist:
     body:
+      - field: chatId
+        type: string
+        description: "Parameter 'chatId'"
+      - field: authorId
+        type: string
+        description: "Parameter 'authorId'"  
       - field: message
         type: string
         description: "Registry code of the requested company"
@@ -23,7 +29,7 @@ declaration:
 
 extract_body:
   assign:
-    message: ${incoming.body.message}
+    message: ${incoming.body.input[0]}
     chatId: ${incoming.body.chatId}
     authorId: ${incoming.body.authorId}
 
@@ -56,7 +62,7 @@ assign_response:
 format_messages:
   call: http.post
   args:
-    url: "[#CHATBOT_DMAPPER]/common-services/hbs/filter-beneficiaries-related-information-for-business-register"
+    url: "[#DMAPPER]/common-services/hbs/filter-beneficiaries-related-information-for-business-register"
     headers:
       type: json
     body:
