--- a/DSL/Ruuter.public/POST/companies/work-force-taxes.yml
+++ b/DSL/Ruuter.public/POST/companies/work-force-taxes.yml
@@ -8,6 +8,12 @@ declaration:
   namespace: common-services
   allowlist:
     params:
+      - field: chatId
+        type: string
+        description: "Parameter 'chatId'"
+      - field: authorId
+        type: string
+        description: "Parameter 'authorId'"  
       - field: registry_code
         type: string
         description: "Parameter 'registry_code'"
@@ -21,14 +27,14 @@ declaration:
 
 extract_body:
   assign:
-    message: ${incoming.body.message}
+    registry_code: ${incoming.body.input[0]}
     chatId: ${incoming.body.chatId}
     authorId: ${incoming.body.authorId}
-    county: ${incoming.body.county}
+    county: ${incoming.body.input[0]}
 
 checkForParams:
   switch:
-    - condition: ${message != null}
+    - condition: ${registry_code != null}
       next: getWithCode
     - condition: ${county != null}
       next: getWithCounty
@@ -40,7 +46,7 @@ getWithCode:
     url: "[#OPENSEARCH]/companies/_search/template"
     body:
       id: "company-with-code"
-      params: { registry_code: "${message}", field: "labor_taxes_and_payments" }
+      params: { registry_code: "${registry_code}", field: "labor_taxes_and_payments" }
   result: res
   next: mapCodeData
 
@@ -58,12 +64,13 @@ mapCodeData:
 checkMappedData:
   switch:
     - condition: ${codeMappedData.response.body.work_force_taxes.length > 0}
-      next: return_code_result
+      next: assign_code_response
   next: return_no_companies_found
 
-return_code_result:
-  return: ${codeMappedData.response.body.work_force_taxes[0]}
-  next: end
+assign_code_response:
+  assign:
+    res: ${codeMappedData.response.body.work_force_taxes[0]}
+  next: format_messages  
 
 return_no_companies_found:
   return: "No companies found"
@@ -88,11 +95,12 @@ mapCountyData:
     body:
       aggregations: ${res.response.body.aggregations}
   result: countyMappedData
-  next: return_county_result
+  next: assign_county_response
 
-return_county_result:
-  return: ${countyMappedData.response.body}
-  next: end
+assign_county_response:
+  assign:
+    res: ${countyMappedData.response.body}
+  next: format_messages  
 
 getAll:
   call: http.post
