--- a/DSL/Ruuter.public/GET/electricity/highest-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/highest-price.yml
@@ -3,21 +3,20 @@ declaration:
   version: 0.1
   name: "Electricity Price Service"
   description: |
-    This service fetches the Nordpool electricity prices for a user-specified date and returns the highest price.
+    This service fetches the Elering electricity prices for a user-specified date and returns the highest price.
   method: get
   returns: json
 
-# Prepare Dates based on userDate
-prepareDates:
+# Prepare Dates based on today
+prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    userDate: ${incoming.params.input[0] || new Date().toISOString().split('T')[0]}  # yyyy-mm-dd
-    startDateTime: ${new Date(new Date(userDate).getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + "T21:00:00.000Z"}
-    endDateTime: ${userDate + "T20:59:59.000Z"}
-  next: getPriceForPeriod
+    startDateTime: "${new Date(new Date().getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + 'T21:00:00.000Z'}"
+    endDateTime: "${new Date().toISOString().split('T')[0] + 'T20:59:59.000Z'}"
+  next: priceForToday
 
-getPriceForPeriod:
+priceForToday:
   call: http.get
   args:
     url: https://dashboard.elering.ee/api/nps/price
@@ -32,7 +31,7 @@ assignVariables:
     maxPrice: ${eleringToday.response.body.data.ee.sort((a, b) => b.price - a.price)[0].price}  # get highest price
     maxPriceTimestamp: ${eleringToday.response.body.data.ee.sort((a, b) => b.price - a.price)[0].timestamp}  # get timestamp for highest price
 
-    tallinnOffset: 10800  # Tallinn is UTC+3 during DST (3 hours in seconds)
+    tallinnOffset: 7200  # Tallinn is UTC+2 during DST (2 hours in seconds)
     adjustedTimestamp: ${maxPriceTimestamp + tallinnOffset} 
     adjustedHour: ${Math.floor((adjustedTimestamp % 86400) / 3600)}
     timeVar: ${("0" + adjustedHour).slice(-2) + ":00"}
@@ -41,7 +40,7 @@ assignVariables:
 assignResponse:
   assign:
     res: {
-       "result": "Kõrgeim elektrihind on ${maxPrice}, kell on ${timeVar}, kuupäeval ${userDate}"
+       "result": "Täna on kõrgeim elektri börsihind ${maxPrice} €/mWh, kell ${timeVar}"
     }
   next: formatMessages
 
@@ -64,7 +63,7 @@ formatMessages:
           "created": "${new Date().toISOString()}",
         }
   result: formatMessage
+  next: returnResult
 
-return_result:
+returnResult:
   return: ${formatMessage.response.body}
-
