--- a/DSL/Ruuter.public/GET/electricity/lowest-price.yml
+++ b/DSL/Ruuter.public/GET/electricity/lowest-price.yml
@@ -1,25 +1,22 @@
 declaration:
   call: declare
   version: 0.1
-  name: "Electricity Price Service"
+  name: "Lowest electricity Price Service"
   description: |
-    This service fetches the Nordpool electricity prices for a user-specified date.
+    This service fetches the lowest elering electricity prices for today
   method: get
-  params:
-    userDate: string  # yyyy-mm-dd format
   returns: json
 
 # Prepare Dates based on userDate
-prepareDates:
+prepare:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    userDate: ${incoming.params.input[0] || new Date().toISOString().split('T')[0]}  # yyyy-mm-dd
-    startDateTime: ${new Date(new Date(userDate).getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + "T21:00:00.000Z"}
-    endDateTime: ${userDate + "T20:59:59.000Z"}
-  next: getPriceForPeriod
+    startDateTime: "${new Date(new Date().getTime() - 24 * 60 * 60 * 1000).toISOString().split('T')[0] + 'T21:00:00.000Z'}"
+    endDateTime: "${new Date().toISOString().split('T')[0] + 'T20:59:59.000Z'}"
+  next: priceForToday
 
-getPriceForPeriod:
+priceForToday:
   call: http.get
   args:
     url: https://dashboard.elering.ee/api/nps/price
@@ -35,7 +32,7 @@ assignVariables:
     minPriceTimestamp: ${eleringToday.response.body.data.ee.sort((a, b) => a.price - b.price)[0].timestamp}
 
     # currently doez not account for DST when changing to winter
-    tallinnOffset: 10800  # Tallinn is UTC+3 during DST (3 hours in seconds)
+    tallinnOffset: 7200  # Tallinn is UTC+3 during DST (3 hours in seconds)
     adjustedTimestamp: ${minPriceTimestamp + tallinnOffset} 
     adjustedHour: ${Math.floor((adjustedTimestamp % 86400) / 3600)}
     timeVar: ${("0" + adjustedHour).slice(-2) + ":00"}
@@ -44,7 +41,7 @@ assignVariables:
 assignResponse:
   assign:
     res: {
-      "result": "Madalaim elektrihind on ${minPrice}, kell on ${timeVar}, kuupäeval ${userDate}"
+      "result": "Täna on madalaim elektri börsihind ${minPrice} €/mWh, kell ${timeVar}"
     }
   next: formatMessages
 
@@ -67,7 +64,8 @@ formatMessages:
           "created": "${new Date().toISOString()}",
         }
   result: formatMessage
+  next: returnResult
 
-return_result:
+returnResult:
   return: ${formatMessage.response.body}
 
