--- a/DSL/Ruuter.public/GET/riigikogu/recent-voting.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/recent-voting.yml
@@ -2,40 +2,57 @@ declaration:
   call: declare
   version: 0.1
   name: Recent voting Service
-  description: A service that provides most recent voting results
+  description: A service that provides most recent voting result
   method: get
   returns: json
   namespace: common-services
 
-prepareRequest:
+prepareVariables:
   assign:
     chatId: ${incoming.params.chatId}
     authorId: ${incoming.params.authorId}
-    lang: "ET"
+    offSet: 90 # get time period with enough data (90 days)
+    end: ${new Date().toISOString().split('T')[0]}
+    start: ${new Date(new Date(end).setDate(new Date(end).getDate() - offSet)).toISOString().split('T')[0]} 
   next: makeAPIRequest
 
 makeAPIRequest:
   call: http.get
   args:
-    url: "https://api.riigikogu.ee/api/votings/last?lang=${lang}"
+    url: "https://api.riigikogu.ee/api/votings?endDate=${end}&lang=ET&startDate=${start}"
     headers:
-      accept: "application/json"
+      Accept: "application/json"
   result: votingData
-  error: returnError
-  next: formatResponse
+  next: votingDataFormatting
 
-formatResponse:
+# Extracts the 5 most recent public votings related to drafts, sorted by date
+votingDataFormatting:
   assign:
-    votingTitle: ${votingData.response.body.description}
-    inFavor: ${votingData.response.body.inFavor}
-    against: ${votingData.response.body.against}
-    neutral: ${votingData.response.body.neutral}
-    abstained: ${votingData.response.body.abstained}
-  next: assignResponse
+    votingDetails: ${votingData.response.body
+      .flatMap(session => session.votings)
+      .filter(voting => voting.type.value === "Avalik" && voting.relatedDraft)
+      .sort((voting1, voting2) => new Date(voting2.startDateTime) - new Date(voting1.startDateTime))
+      .slice(0, 1)}
+  next: formatResult
 
-assignResponse:
+formatResult:
   assign:
-    res: ${"'" + votingTitle+ "', Poolt on " + inFavor + ", Vastu on " + against + ", Neutraalsed " + neutral + ", Ei hääletanud " + abstained}
+    voting: ${votingDetails[0]}
+    votingTitle: ${voting.relatedDraft.title}
+    inFavor: ${voting.inFavor}
+    against: ${voting.against}
+    neutral: ${voting.neutral}
+    abstained: ${voting.abstained}
+    absent: ${voting.absent}
+    present: ${voting.present}
+    res: {
+      "result": "Viimane hääletus:
+      
+      '${votingTitle}'
+
+      Kohal: ${present}, Puudus: ${absent}, Poolt: ${inFavor}, Vastu: ${against}, Erapooletu: ${neutral}, Ei hääletanud: ${abstained}"
+    }
+
   next: formatMessages
 
 formatMessages:
