--- a/DSL/Ruuter.public/GET/riigikogu/recent-voting.yml
+++ b/DSL/Ruuter.public/GET/riigikogu/recent-voting.yml
@@ -46,11 +46,7 @@ formatResult:
     absent: ${voting.absent}
     present: ${voting.present}
     res: {
-      "result": "Viimane hääletus:
-      
-      '${votingTitle}'
-
-      Kohal: ${present}, Puudus: ${absent}, Poolt: ${inFavor}, Vastu: ${against}, Erapooletu: ${neutral}, Ei hääletanud: ${abstained}"
+      "result": "Viimane hääletus:\\n\\n${votingTitle}\\n\\nKohal: ${present}\\nPuudus: ${absent}\\nPoolt: ${inFavor}\\nVastu: ${against}\\nErapooletu: ${neutral}\\nEi hääletanud: ${abstained}"
     }
 
   next: formatMessages
